[package]
name = "nullrouter-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Auth — sessions, JWT, bcrypt, API keys. Port of inspire/src/auth and inspire/src/lib/auth"

[lib]
path = "src/lib.rs"

[dependencies]
nullrouter-core = { path = "../nullrouter-core" }
nullrouter-db = { path = "../nullrouter-db" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
hmac.workspace = true
base64.workspace = true
hex.workspace = true
uuid.workspace = true
rand.workspace = true
ring.workspace = true
time.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true
