[package]
name = "nullrouter-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Main server binary — Actix-web HTTP + leptos_actix SSR + MITM proxy supervisor"

[[bin]]
name = "nullrouter"
path = "src/main.rs"

[dependencies]
nullrouter-core = { path = "../nullrouter-core" }
nullrouter-sse = { path = "../nullrouter-sse" }
nullrouter-db = { path = "../nullrouter-db" }
nullrouter-auth = { path = "../nullrouter-auth" }
nullrouter-api = { path = "../nullrouter-api" }
nullrouter-mitm = { path = "../nullrouter-mitm" }
nullrouter-dashboard = { path = "../nullrouter-dashboard", features = ["ssr"] }

tokio.workspace = true
actix-web.workspace = true
actix-files.workspace = true
actix-cors.workspace = true
actix-rt.workspace = true
leptos = { workspace = true, features = ["ssr"] }
leptos_actix.workspace = true
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true
chrono.workspace = true
clap.workspace = true
directories.workspace = true
dirs.workspace = true
