[package]
name = "nullrouter-sse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SSE pipeline — port of inspire/open-sse (translator, executors, rtk, handlers, services, transformer)"

[lib]
path = "src/lib.rs"

[dependencies]
nullrouter-core = { path = "../nullrouter-core" }
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
reqwest.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
once_cell.workspace = true
regex.workspace = true
url.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
mime.workspace = true
encoding_rs.workspace = true
flate2.workspace = true
brotli.workspace = true
base64.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
rand.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true
wiremock.workspace = true
